<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_button">Spotify Streamer</string>
    <string name="my_heading_textview">My Nanodegree Apps!</string>
    <string name="scores_app_button">Scores App</string>
    <string name="library_app_button">Library App</string>
    <string name="build_it_bigger_button">Build It Bigger</string>
    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="capstone_my_own_app_button">Capstone: My Own App</string>
</resources>
